--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,3 @@
- ASP.NET Core (.NET Framework)
-# Build and test ASP.NET Core projects targeting the full .NET Framework.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
 - '*'
@@ -13,8 +9,8 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- task: UseDotnet@2
-  displayName: 'Use .Net SDK 6.x'
+- task: UseDotNet@2
+  displayName: 'Use .NET SDK 6.x'
   inputs:
     packageType: sdk
     version: '6.x'
